# kubernetesDemo

./: docker-entry.sh  dockerfile  ezprobe.yml  pyproject.toml  requirements.txt
api/: app.py
api/common/: enum.py
kubernetes/: 00_namespace.yml  01_database.yml  ezkubernetes.yml
