[tool.poetry]
name = "docker-practice"
version = "0.1.0"
description = ""
authors = ["liumi666 <whitepepper4140@gmail.com>"]
readme = "README.md"
packages = [{include = "docker_practice"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
